force-app/main/default/objects/Credit_Card__x/Credit_Card__x.object-meta.xml
<CustomObject>
    <description>Credit Cards Financial Account</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>CreditCard</externalName>
    <label>Credit Card</label>
    <pluralLabel>Credit Cards</pluralLabel>
</CustomObject>