force-app/main/default/objects/Credit_Card__x/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>The current stage of the account in the life cycle of the account.</description>
    <externalDeveloperName>AccountStatus</externalDeveloperName>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>