force-app/main/default/objects/Credit_Card__x/fields/Available_Funds__c.field-meta.xml
<CustomField>
    <fullName>Available_Funds__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Available Funds ($)</description>
    <externalDeveloperName>AvailableFunds</externalDeveloperName>
    <label>Available Funds ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>