force-app/main/default/objects/Credit_Card__x/fields/Block_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Block_Code_1__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Block Code 1</description>
    <externalDeveloperName>BlockCode1</externalDeveloperName>
    <label>Block Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>