force-app/main/default/objects/Credit_Card__x/fields/Block_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Block_Code_2__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Block Code 2</description>
    <externalDeveloperName>BlockCode2</externalDeveloperName>
    <label>Block Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>