force-app/main/default/objects/Credit_Card__x/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Branch</description>
    <externalDeveloperName>Branch</externalDeveloperName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>