force-app/main/default/objects/Credit_Card__x/fields/Cash_Advance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cash_Advance_Rate__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Cash Advance Rate</description>
    <externalDeveloperName>CashAdvanceRate</externalDeveloperName>
    <label>Cash Advance Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>