force-app/main/default/objects/Credit_Card__x/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>The controlling post of the account</description>
    <externalDeveloperName>CPID</externalDeveloperName>
    <label>CPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>