force-app/main/default/objects/Credit_Card__x/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Max credit limit</description>
    <externalDeveloperName>CreditLimit</externalDeveloperName>
    <label>Limit  ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>