force-app/main/default/objects/Credit_Card__x/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - CAPS</complianceGroup>
    <description>Date Closed</description>
    <externalDeveloperName>DateClosed</externalDeveloperName>
    <label>Date Closed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>