force-app/main/default/objects/Credit_Card__x/fields/Days_Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Days_Delinquent__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Days Delinquent</description>
    <externalDeveloperName>DaysDelinquent</externalDeveloperName>
    <label>Days Delinquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>