force-app/main/default/objects/Credit_Card__x/fields/Delinquent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Delinquent Amount ($)</description>
    <externalDeveloperName>DelinquentAmount</externalDeveloperName>
    <label>Delinquent Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>