force-app/main/default/objects/Credit_Card__x/fields/Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Frequent_Flyer_Number__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Qantas Frequent Flyer number</description>
    <externalDeveloperName>FrequentFlyerNumber</externalDeveloperName>
    <label>Frequent Flyer Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>