force-app/main/default/objects/Credit_Card__x/fields/Interest_Free_Days__c.field-meta.xml
<CustomField>
    <fullName>Interest_Free_Days__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Interest Free Days</description>
    <externalDeveloperName>InterestFreeDays</externalDeveloperName>
    <label>Interest Free Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>