force-app/main/default/objects/Credit_Card__x/fields/Minimum_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Monthly_Payment__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Minimum Monthly Payment ($)</description>
    <externalDeveloperName>MinimumMonthlyPayment</externalDeveloperName>
    <label>Minimum Monthly Payment ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>