force-app/main/default/objects/Credit_Card__x/fields/Overdraft_Limit__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Limit__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Overdraft limit</description>
    <externalDeveloperName>Limit</externalDeveloperName>
    <label>Overdraft Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>