force-app/main/default/objects/Credit_Card__x/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Product status</description>
    <externalDeveloperName>ProductStatus</externalDeveloperName>
    <label>Product Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>