force-app/main/default/objects/Credit_Card__x/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source_Salesforce</complianceGroup>
    <description>Customer relationship with the account</description>
    <externalDeveloperName>Relationship</externalDeveloperName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>