force-app/main/default/objects/Credit_Card__x/fields/Rewards_Number__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Rewards Number</description>
    <externalDeveloperName>RewardsNumber</externalDeveloperName>
    <label>Rewards Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>